=== 2016-06-29
* Enhancements
  * Added ability to locate div by the contained text
  * Added #attach_to_window so a page object can operate on another window
=== 2016-06-21
* Enhancements
  * Handling popups
    * Added #alert to page object to override default alert popup behavior
    * Added #confirm to page object to override default confirm popup behavior
    * Added #prompt to page object to override default prompt popup behavior
=== 2016-06-20
* Enhancements
  * Async handling
    * Added #wait_until to page object to support for async events at page level
    * Added the following methods to Druid::Elements::Element
      * #when_present
      * #when_visible
      * #when_not_visible
      * #wait_until
=== Version 1.0.0
=== 2016-06-04
* Enhancements
  * Support for using multiple identifiers when locating the following element:
    * Link
    * TextField
    * HiddenField
    * TextArea
    * SelectList
    * CheckBox
    * RadioButton
    * Button
    * Div
    * Span
    * Table
    * TableCell
    * Image
    * Form
    * ListItem
    * UnorderedList
    * OrderedList

  * Support name for identification across all elements in Watir
  * Added [] method to SelectList to index Options
  * Added options method to Select

=== 2016-06-2
* Enhancements
  * Added rows method to Table to return number of rows
  * Added [] method to Table to index table row element
  * Added columns method to TableRow to return the number of columns
  * Added [] method to TableRow to index table cell element
  * Added each method to Table to iterate over the TableRows
  * Added each method to TableRow to iterate over TableCells
  * Added items method to UnorderedList to return number of ListItems
  * Added items method to OrderedList to return number of ListItems
  * Added each method to UnorderedList to iterate over the ListItems
  * Added each method to OrderedList to iterate over the ListItems
  * Created PageFactory module to add factory methods to your step definitions

