@@ -2,6 +2,8 @@
 * Enhancements
   * Added ability to locate div by the contained text
   * Added #attach_to_window so a page object can operate on another window
+  * Added #send_keys to Druid::Elements::Element
+  * Added #refresh to page object
 === 2016-06-21
 * Enhancements
   * Handling popups
